adding badge support

--- a/ext/timers.html
+++ b/ext/timers.html
@@ -115,10 +115,14 @@ $.extend(window.Ananke.controller.prototype, {
 			this.table.append("<tr><td><em>None</em></td></tr>")
 			return;
 		}
+		var running = 0;
 		for(var i = 0; i < this.model.items.length; i++) {
 			var item = this.model.items[i];
+			if (item.isPaused == false) running++;
 			this.taskTemplate.tmpl(item, this.constructor.templateHelpers).appendTo(this.table).attr("data-item-index", i);
 		}
+
+		window.Ananke.updateBadge(running);
 	},
 	updateTimes: function() {
 		var items = this.model.items;
