--- a/ext/options.html
+++ b/ext/options.html
@@ -43,6 +43,7 @@ html {
 	background-color: #999;
 }
 body { background-color: white; padding: 1em; width: 500px; margin: 0 auto; }
+#status { display:inline-block;  margin-left: 1em; }
 	</style>
 	</head>
 	<body>
