--- a/ext/timers.html
+++ b/ext/timers.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src='jquery-1.5.min.js'></script>
-<script type="text/javascript" src='jquery.tmpl.min.js'></script>
-<script type="text/javascript" src='ananke.core.js'></script>
+<script type="text/javascript" src='js/jquery-1.5.min.js'></script>
+<script type="text/javascript" src='js/jquery-ui-1.8.9.custom.min.js'></script>
+<script type="text/javascript" src='js/jquery.tmpl.min.js'></script>
+<script type="text/javascript" src='js/ananke.core.js'></script>
 <script type="text/javascript">
 window.Ananke.controller = function(model) {
 	this.model = model;
