Injecting Item class

--- a/ext/timers.html
+++ b/ext/timers.html
@@ -35,10 +35,11 @@ $(function() {
 		linkIcons: $(".icon.link"),
 
 		// Options
-		anankeOptions: window.Ananke.options
+		anankeOptions: window.Ananke.options,
+
+		// Item Class
+		itemClass: window.Ananke.Item
 	}
-
-
 
 	var controller = new window.Ananke.TimerController(config);
 })
