--- a/tests/tests.html
+++ b/tests/tests.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="TimerControllerTests.js"></script>
   </head>
   <body>
-    <h1 id="qunit-header">QUnit example</h1>
+    <h1 id="qunit-header">Ananke Tests</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
     <ol id="qunit-tests">
