--- a/ext/timers.html
+++ b/ext/timers.html
@@ -36,6 +36,7 @@ $(function() {
 
 		// Options
 		anankeOptions: window.Ananke.options,
+		badgeUpdater: window.Ananke.updateBadge,
 
 		// Item Class
 		itemClass: window.Ananke.Item
