--- a/tests/tests.html
+++ b/tests/tests.html
@@ -7,6 +7,9 @@
     <script type="text/javascript" src="core/qunit.js"></script>
     <script type="text/javascript" src='../ext/js/timer.controller.js'></script>
     <script type="text/javascript" src="TimerControllerTests.js"></script>
+    <script type="text/javascript" src='../ext/js/ananke.item.js'></script>
+    <script type="text/javascript" src="ItemTests.js"></script>
+
   </head>
   <body>
     <h1 id="qunit-header">Ananke Tests</h1>
