Minifying javascript and moving around source javascript

--- a/ext/background.html
+++ b/ext/background.html
@@ -1,6 +1,5 @@
 <html>
-<script type="text/javascript" src='js/jquery-1.5.min.js'></script>
-<script type="text/javascript" src='js/ananke.core.js'></script>
+<script type="text/javascript" src='ananke.min.js'></script>
 <script>
 window.Ananke.initBadge();
 </script>
