--- a/ext/timers.html
+++ b/ext/timers.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript" src='js/jquery-1.5.min.js'></script>
-<script type="text/javascript" src='js/jquery-ui-1.8.9.custom.min.js'></script>
-<script type="text/javascript" src='js/jquery.tmpl.min.js'></script>
-<script type="text/javascript" src='js/ananke.core.js'></script>
-<script type="text/javascript" src='js/ananke.item.js'></script>
-<script type="text/javascript" src='js/timer.controller.js'></script>
+<script type="text/javascript" src='ananke.min.js'></script>
 <script type="text/javascript">
 $(function() {
 	var model = new window.Ananke.ItemsRepository("Ananke.items");
