--- a/tests/tests.html
+++ b/tests/tests.html
@@ -3,11 +3,9 @@
 <html>
   <head>
     <link rel="stylesheet" href="core/qunit.css" type="text/css"/>
-    <script type="text/javascript" src='../ext/js/jquery-1.5.min.js'></script>
+    <script type="text/javascript" src='../ext/ananke.min.js'></script>
     <script type="text/javascript" src="core/qunit.js"></script>
-    <script type="text/javascript" src='../ext/js/timer.controller.js'></script>
     <script type="text/javascript" src="TimerControllerTests.js"></script>
-    <script type="text/javascript" src='../ext/js/ananke.item.js'></script>
     <script type="text/javascript" src="ItemTests.js"></script>
 
   </head>
