--- a/ext/options.html
+++ b/ext/options.html
@@ -1,8 +1,7 @@
 <html>
 	<head>
 	<title>Ananke Options</title>
-	<script type="text/javascript" src='js/jquery-1.5.min.js'></script>
-	<script type="text/javascript" src='js/ananke.core.js'></script>
+	<script type="text/javascript" src='ananke.min.js'></script>
 	<script type="text/javascript">
 $(function() {
 	if(window.Ananke.options.getPauseOnCreate())
